@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- The mouse pointer now changes to the I beam
+	  (FL_CURSOR_INSERT) when moved over an input field or
+	  text widget.
 	- "make install" didn't automatically (re)compile the
 	  FLUID executable.
 	- Added an Fl::get_boxtype() method to get the current
